--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized
 __pycache__/
-*.py[cod]
+*.py[co]
 *$py.class
 
 # C extensions
